# IonEngine

./: .gitignore  .gitmodules  IonEngine.csproj  IonEngine.sln  Lines.ps1  Program.cs  Project.cs  README.md  Window.cs  projectData.json
ionEngine/: CMakeLists.txt
ionEngine/include/ionEngine/: ionEngine.h
ionEngine/resources/: style.yaml
ionEngine/resources/models/: monkey.asset
ionEngine/resources/shaders/: pbr.slang  skybox.slang
ionEngine/sdk/IonEngine/: Components.cs  Input.cs  IonEngine.csproj  KeyCodes.cs  Log.cs  Scene.cs  SceneManager.cs  System.cs  View.cs
ionEngine/src/: common.h
ionEngine/src/asset/: AssetId.h  assetImporter.h  assetManager.cpp  assetManager.h  assetRef.h  assetSerializer.h  assetStream.h
ionEngine/src/audio/: audioClip.cpp  audioClip.h  audioClipImporter.cpp  audioClipImporter.h  audioCommand.h  audioManager.cpp  audioManager.h  audioSystem.cpp  audioSystem.h  sound.cpp  sound.h
ionEngine/src/core/: coreSystem.cpp  coreSystem.h  engine.cpp  engine.h  event.h  eventManager.cpp  eventManager.h  scene.cpp  scene.h  sceneManager.cpp  sceneManager.h  system.h
ionEngine/src/graphics/: frustum.cpp  frustum.h  graphicsSystem.cpp  graphicsSystem.h  imGuiSystem.cpp  imGuiSystem.h  image.cpp  image.h  renderContext.h  renderPass.h  renderTarget.cpp  renderTarget.h  renderUtil.cpp  renderUtil.h  renderer.cpp  renderer.h
ionEngine/src/graphics/assets/: mesh.cpp  (+4 more)
ionEngine/src/input/: input.cpp  input.h  inputSystem.cpp  inputSystem.h
ionEngine/src/scripting/: scriptBridge.cpp  scriptBridge.h  scriptingSystem.cpp  scriptingSystem.h
(+192 files in other folders)
